# qq_warning

./: .gitignore  AGENTS.md  API_COVERAGE.md  CHEATSHEET.md  COMPLETION_SUMMARY.md  Cargo.toml  EXAMPLES.md  FEATURE_CHECK.md  IMPLEMENTATION_REPORT.md  IMPLEMENTATION_SUMMARY.md  LICENSE  PROJECT.md  QUICKSTART.md  README.md  README_zh.md  STREAM_IMPLEMENTATION.md  TEST_REPORT.md  USAGE_EXAMPLES.md  check_build.sh  config.toml
.github/workflows/: release.yml
src/: api.rs  config.rs  main.rs  qqbot.rs  types.rs  utils.rs  websocket.rs
