[package]
name = "qq_warning"
version = "0.1.0"
edition = "2021"
authors = ["YsLtr"]

[dependencies]
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
anyhow = "1.0"
clap = { version = "4", features = ["derive"] }
toml = "0.8"
futures-util = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
notify-rust = "4"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
